--- a/web/interpolation.html
+++ b/web/interpolation.html
@@ -27,6 +27,13 @@ permalink: "{{ page.filePathStem }}.html"
     <p><code>LinearInterpolation</code> is quick and easy, but it is not very precise. Another disadvantage
         is that the interpolant is not differentiable at the control points.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_1" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_1" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_1">
+            <div class="code" style="text-align: left;">
     <pre class="prettyprint lang-scala"><code>
     val x = Array(0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0)
     val y = Array(0.0, 0.8415, 0.9093, 0.1411, -0.7568, -0.9589, -0.2794)
@@ -39,8 +46,31 @@ permalink: "{{ page.filePathStem }}.html"
       Array(x, y)
     }.toArray
 
-    line(data)
+    val canvas = line(data)
+    show(canvas)
     </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_1">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    double[] x = {0.0, 1.0, 2.0, 3.0, 4.0, 5.0, 6.0}
+    double[] y = {0.0, 0.8415, 0.9093, 0.1411, -0.7568, -0.9589, -0.2794}
+
+    var linear = new LinearInterpolation(x, y)
+
+    double[][] data = new double[61][2]
+    for (int i = 0; i < data.length; i++) {
+      data[i][0] = i * 0.1;
+      data[i][1] = linear.interpolate(data[i][0]);
+    }
+
+    var canvas = LinePlot.plot(data, Line.Style.SOLID)
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/linear-interpolation.png" class="enlarge" style="width: 480px;" />
@@ -66,6 +96,45 @@ permalink: "{{ page.filePathStem }}.html"
         used in polynomial interpolation. It also does not suffer from Runge's
         phenomenon.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_2" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_2" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_2">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val cubic = new CubicSplineInterpolation1D(x, y)
+
+    val data = (0 to 60).map { i =>
+      val x = i * 0.1
+      val y = cubic.interpolate(x)
+      Array(x, y)
+    }.toArray
+
+    canvas.line("Cubic", data, RED)
+    show(canvas)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_2">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var cubic = new CubicSplineInterpolation1D(x, y)
+
+    double[][] data = new double[61][2]
+    for (int i = 0; i < data.length; i++) {
+      data[i][0] = i * 0.1;
+      data[i][1] = cubic.interpolate(data[i][0]);
+    }
+
+    canvas.line("Cubic", data, Color.RED)
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
+
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/cubic-interpolation.png" class="enlarge" style="width: 480px;" />
     </div>
@@ -87,12 +156,140 @@ permalink: "{{ page.filePathStem }}.html"
         <img src="images/grid-interpolation2d.png" class="enlarge" style="width: 480px;" />
     </div>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_3" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_3" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_3">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val x1 = Array(1950.0, 1960, 1970, 1980, 1990)
+    val x2 = Array(10.0, 20, 30)
+    val y = Array(
+            Array(150.697, 199.592, 187.625),
+            Array(179.323, 195.072, 250.287),
+            Array(203.212, 179.092, 322.767),
+            Array(226.505, 153.706, 426.730),
+            Array(249.633, 120.281, 598.243)
+        )
+
+    val canvas = heatmap(y, Palette.jet(256))
+    canvas.setTitle("Original")
+    show(canvas)
+
+    val cubic = new CubicSplineInterpolation2D(x1, x2, y)
+
+    val data = Array.ofDim[Double](101, 101)
+    for (i <- 0 to 100; j <- 0 to 100)
+      data(i)(j) = cubic.interpolate(1950 + i*0.4, 10 + j*0.2)
+
+    val cubicPlot = heatmap(data, Palette.jet(256))
+    cubicPlot.setTitle("Cubic")
+    show(cubicPlot)
+
+    val bicubic = new BicubicInterpolation(x1, x2, y)
+
+    for (i <- 0 to 100; j <- 0 to 100)
+      data(i)(j) = bicubic.interpolate(1950 + i*0.4, 10 + j*0.2)
+
+    val bicubicPlot = heatmap(data, Palette.jet(256))
+    bicubicPlot.setTitle("Bicubic")
+    show(bicubicPlot)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_3">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    double[] x1 = {1950.0, 1960, 1970, 1980, 1990}
+    double[] x2 = {10.0, 20, 30}
+    double[][] y = {
+            {150.697, 199.592, 187.625},
+            {179.323, 195.072, 250.287},
+            {203.212, 179.092, 322.767},
+            {226.505, 153.706, 426.730},
+            {249.633, 120.281, 598.243}
+        }
+
+    var canvas = Heatmap.plot(y, Palette.jet(256))
+    canvas.setTitle("Original")
+    canvas.window()
+
+    var cubic = new CubicSplineInterpolation2D(x1, x2, y)
+
+    double[][] data = new double[101][101]
+    for (int i = 0; i <= 100; i++) {
+        for (int j = 0; j <= 100; j++) {
+            data[i][j] = cubic.interpolate(1950 + i*0.4, 10 + j*0.2);
+        }
+    }
+
+    var cubicPlot = Heatmap.plot(data, Palette.jet(256))
+    cubicPlot.setTitle("Cubic")
+    cubicPlot.window()
+
+    val bicubic = new BicubicInterpolation(x1, x2, y)
+
+    for (int i = 0; i <= 100; i++) {
+        for (int j = 0; j <= 100; j++) {
+            data[i][j] = cubic.interpolate(1950 + i*0.4, 10 + j*0.2);
+        }
+    }
+
+    var bicubicPlot = Heatmap.plot(data, Palette.jet(256))
+    bicubicPlot.setTitle("Bicubic")
+    bicubicPlot.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
+
     <h2 id="kriging" class="title">Kriging Interpolation</h2>
 
     <p>Kriging interpolation can be used for the data points irregularly distributed in space.
         Kriging belongs to the family of linear least squares estimation algorithms,
         also known as Gauss-Markov estimation or Gaussian process regression.
         We implement ordinary kriging for interpolation with power variogram.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_4" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_4" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_4">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val kriging = new KrigingInterpolation1D(x, y)
+
+    val data = Array.ofDim[Double](61, 2)
+    for (i <- 0 to 60) {
+      data(i)(0) = i * 0.1
+      data(i)(1) = kriging.interpolate(data(i)(0))
+    }
+
+    canvas.line("Kriging", data, CYAN)
+    show(canvas)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_4">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var kriging = new KrigingInterpolation1D(x, y)
+
+    double[][] data = new double[61][2]
+    for (int i = 0; i < data.length; i++) {
+      data[i][0] = i * 0.1;
+      data[i][1] = kriging.interpolate(data[i][0]);
+    }
+
+    canvas.line("Kriging", data, Color.CYAN)
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/kriging-interpolation.png" class="enlarge" style="width: 480px;" />
@@ -137,6 +334,45 @@ permalink: "{{ page.filePathStem }}.html"
         there is no evidence that either the NRBF method is consistently superior
         to the RBF method, or vice versa.</p>
 
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_5" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_5" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_5">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val rbf = new RBFInterpolation1D(x, y, new smile.math.rbf.GaussianRadialBasis())
+
+    val data = Array.ofDim[Double](61, 2)
+    for (i <- 0 to 60) {
+      data(i)(0) = i * 0.1
+      data(i)(1) = rbf.interpolate(data(i)(0))
+    }
+
+    canvas.line("RBF", data, GREEN)
+    show(canvas)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_5">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var rbf = new RBFInterpolation1D(x, y, new smile.math.rbf.GaussianRadialBasis())
+
+    double[][] data = new double[61][2]
+    for (int i = 0; i < data.length; i++) {
+      data[i][0] = i * 0.1;
+      data[i][1] = rbf.interpolate(data[i][0]);
+    }
+
+    canvas.line("RBF", data, Color.GREEN)
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
+
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/rbf-interpolation.png" class="enlarge" style="width: 480px;" />
     </div>
@@ -148,6 +384,45 @@ permalink: "{{ page.filePathStem }}.html"
         the respective function values y<sub>i</sub>. So we need not solve linear
         equations and thus it works for very large N. An example of such &phi;
         is &phi;(r) = r<sup>-p</sup> with (typically) 1 &lt; p &le; 3.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_6" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_6" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_6">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val shepard = new ShepardInterpolation1D(x, y, 3)
+
+    val data = Array.ofDim[Double](61, 2)
+    for (i <- 0 to 60) {
+      data(i)(0) = i * 0.1
+      data(i)(1) = shepard.interpolate(data(i)(0))
+    }
+
+    canvas.line("Shepard", data, PINK)
+    show(canvas)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_6">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    var shepard = new ShepardInterpolation1D(x, y, 3)
+
+    double[][] data = new double[61][2]
+    for (int i = 0; i < data.length; i++) {
+      data[i][0] = i * 0.1;
+      data[i][1] = shepard.interpolate(data[i][0]);
+    }
+
+    canvas.line("Shepard", data, Color.PINK)
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/shepard-interpolation.png" class="enlarge" style="width: 480px;" />
@@ -167,6 +442,57 @@ permalink: "{{ page.filePathStem }}.html"
         evenly spaced regular grid. In some sense, Laplace interpolation
         produces the smoothest possible interpolant, which are obtained by solving
         a very sparse linear equations with biconjugate gradient method.</p>
+
+    <ul class="nav nav-tabs">
+        <li class="active"><a href="#scala_7" data-toggle="tab">Scala</a></li>
+        <li><a href="#java_7" data-toggle="tab">Java</a></li>
+    </ul>
+    <div class="tab-content">
+        <div class="tab-pane active" id="scala_7">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-scala"><code>
+    val zz = Array.ofDim[Double](101, 101)
+    val ww = Array.ofDim[Double](101, 101)
+    for (i <- 0 to 100; j <- 0 to 100) {
+      zz(i)(j) = if (java.lang.Math.random() < 0.2) Double.NaN else data(i)(j)
+      ww(i)(j) = zz(i)(j)
+    }
+
+    val canvas = heatmap(ww, Palette.jet(256))
+    canvas.setTitle("Missing Values")
+    show(canvas)
+
+    LaplaceInterpolation.interpolate(zz)
+    val canvas = heatmap(zz, Palette.jet(256))
+    canvas.setTitle("Laplace")
+    show(canvas)
+          </code></pre>
+            </div>
+        </div>
+        <div class="tab-pane" id="java_7">
+            <div class="code" style="text-align: left;">
+          <pre class="prettyprint lang-java"><code>
+    double[][] zz = new double[101][101]
+    double[][] ww = new double[101][101]
+    for (int i = 0; i <= 100; i++) {
+        for (int j = 0; j <= 100; j++) {
+            zz[i][j] = Math.random() < 0.2 ? Double.NaN : data[i][j];
+            ww[i][j] = zz[i][j];
+        }
+    }
+
+    var canvas = Heatmap.plot(ww, Palette.jet(256))
+    canvas.setTitle("Missing Values")
+    canvas.window()
+
+    LaplaceInterpolation.interpolate(zz)
+    var canvas = Heatmap.plot(zz, Palette.jet(256))
+    canvas.setTitle("Laplace")
+    canvas.window()
+          </code></pre>
+            </div>
+        </div>
+    </div>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/laplace-interpolation.png" class="enlarge" style="width: 480px;" />
